# Music_Lib

./: .cache  .gitignore  runner.py
data/: beets.db
downloader/: main.py  pyproject.toml
downloader/config/: beets.yaml  playlists.json
downloader/models/: playlist.py
downloader/routers/: sources.py  sync.py
downloader/services/: download.py  playlist.py  state.py
downloader/ui/: index.html
