[project]
name = "downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "beets[fetchart]>=2.6.2",
    "fastapi>=0.135.1",
    "mutagen>=1.47.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "spotipy>=2.25.2",
    "uvicorn[standard]>=0.41.0",
    "yt-dlp>=2026.2.21",
]
